# leveldb-practise

./: CMakeLists.txt  README.md
src/: LevelDBTest.cpp  main.cpp
